[gd_scene load_steps=3 format=3 uid="uid://ctkqfowcg1go5"]

[ext_resource type="Script" uid="uid://crpdfoii5dxs5" path="res://login_screen.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://gdyhfi4yt40c" path="res://resolute_logo.png" id="2_logo"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.18, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Logo" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("2_logo")
expand_mode = 3
stretch_mode = 5

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Login to ResoLute"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FormContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="UsernameLabel" type="Label" parent="CenterContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Username"

[node name="UsernameField" type="LineEdit" parent="CenterContainer/VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
placeholder_text = "Enter your username"

[node name="PasswordLabel" type="Label" parent="CenterContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Password"

[node name="PasswordField" type="LineEdit" parent="CenterContainer/VBoxContainer/FormContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
placeholder_text = "Enter your password"
secret = true

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer/FormContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StartQuestButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Quest"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Back"
